--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
      margin: 0;
     box-sizing: border-box;
     padding: 0;
-    
+   overflow-y: hidden;
     background-color: rgb(9, 8, 10);
     
 }
@@ -64,7 +64,7 @@ body{
     border: solid rgb(55, 9, 219);
     box-shadow: 0px 10px 35px rgb(55, 9, 219);
     backdrop-filter: blur(6px);
-
+    visibility: hidden;
     
 }
  
@@ -180,6 +180,7 @@ body{
     border-radius: 50%;
     top: 600px;
     left: -220px;
+    z-index:111 ;
 }
 
 
@@ -246,5 +247,6 @@ body{
     top: -57px;
     border: solid rgb(55, 9, 219);
     box-shadow: 0px 0px 25px rgb(55, 9, 219);
-    
+    user-select: none; 
+    pointer-events: none;
 }
